top banner added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hena Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Boss Hena</span> World!</h1>
+            <h3>A Beautiful Girl & A Boss Of Somesone</h3>
+            <p>Hena is a lovely girl who think her as a boss. But this is only for one who is special to her. She don't love to show-off her power of boss with everyone. She is a girls with lots of emotion. Whenever she got stuck in anythings she become very emotional with her dearest and nearest one</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/hena.png" alt="hena">
+        </div>
+    </section>
+
+
 </body>
+
 </html>
