--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
             <img src="images/hena.png" alt="hena">
         </div>
     </section>
-
-
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/hena2.png" alt="hena2">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>A High Ambitious Girl</h2>
+            <p>Hena is a lovely girl who think her as a boss. But this is only for one who is special to her. She don't love to show-off her power of boss with everyone. She is a girls with lots of emotion. Whenever she got stuck in anythings she become very emotional with her dearest and nearest one</p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
-
 </html>
