--- a/index.html
+++ b/index.html
@@ -13,28 +13,46 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="orange-color">Boss Hena</span> World!</h1>
-            <h3>A Beautiful Girl & A Boss Of Somesone</h3>
-            <p>Hena is a lovely girl who think her as a boss. But this is only for one who is special to her. She don't love to show-off her power of boss with everyone. She is a girls with lots of emotion. Whenever she got stuck in anythings she become very emotional with her dearest and nearest one</p>
+            <h1><span class="orange-color">Hena's</span> World!</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/hena.png" alt="hena">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/hena2.png" alt="hena2">
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
-            <h2>A High Ambitious Girl</h2>
-            <p>Hena is a lovely girl who think her as a boss. But this is only for one who is special to her. She don't love to show-off her power of boss with everyone. She is a girls with lots of emotion. Whenever she got stuck in anythings she become very emotional with her dearest and nearest one</p>
+            <h2>Become a web developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach someone how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
             <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack-developer" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2022-Present | Pro level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="baby-web-developer" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2022-2024 | Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
 </body>
+<footer>
+    <p>© Hena 2023, a Programming Hero initiative</p>
+</footer>
 </html>
