--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hena Portfolio</title>
+    <title>Hena's Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -17,9 +17,9 @@
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Hena's</span> World!</h1>
-            <h3>Build Climber and Train Stopper</h3>
-            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
-            <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">HIRE ME</a>
+            <h3>A Dedicated Web Developer</h3>
+            <p>You might saw me singings, dancings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/jobaida-kawsar-hena-426384244">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/hena.png" alt="hena">
@@ -27,7 +27,7 @@
     </section>
     <section class="dream-big flexible-container">
         <div class="half-width">
-            <img src="images/hena2.png" alt="hena2">
+            <img src="images/hena.png" alt="hena">
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
